--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,12 +10,13 @@
   --font-poppins: 'Poppins', sans-serif;
 }
 
-body,h3 {
-  font-family: var(--font-poppins);
+body, h3 {
+  font-family: var(--font-poppins), 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #FFF8F3; /* Changed to a darker color for better visibility */
 }
 
 h1, h2, h4, h5, h6 {
-  font-family: "La Belle Aurore", cursive;
+  font-family: "La Belle Aurore", cursive, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 400;
   font-style: normal;
 }
