--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@
 
 body, h3 {
   font-family: var(--font-poppins), 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #FFF8F3; /* Changed to a darker color for better visibility */
+  color: #000000; /* Changed to a darker color for better visibility */
 }
 
 h1, h2, h4, h5, h6 {
